welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:-5: warning: comparing values of types Int and Null using `==' will always yield false
   t.setResult(if (res==null||res == Nil) {null} else {res.asInstanceOf[List[Int]].asJava})
                      ^golomb:-5: warning: comparing values of types Int and scala.collection.immutable.Nil.type using `==' will always yield false
   t.setResult(if (res==null||res == Nil) {null} else {res.asInstanceOf[List[Int]].asJava})
                                  ^golomb:14: error: forward reference extends over definition of variable nbCasesARemplir
    var nbCasesARemplir:Int = tableau(i - nbCasesARemplir)
                                          ^